appId: com.jaf.matos.testing
tags:
  - baseline
---
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 10000

- tapOn:
    id: "button_open-sheet"

- waitForAnimationToEnd

- takeScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-empty
    cropOn:
      id: "bottomsheet"

- swipe:
    start: 90%, 50%
    end: 90%, 35%
    duration: 400

- waitForAnimationToEnd

- takeScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-expanded-600h-empty
    cropOn:
      id: "bottomsheet"
