appId: com.jaf.matos.testing
--- 
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible: 
      id: "button_open-sheet"
    timeout: 10000

- tapOn: 
    id: "button_open-sheet"

- waitForAnimationToEnd

- swipe:
    start: 90%, 50%
    end: 90%, 35%
    duration: 400

- waitForAnimationToEnd

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-fullscreen-empty
    cropOn: 
      id: bottomsheet
    thresholdPercentage: 95
